Fix :hover suppress on mobile

--- a/patterns/lfa-patterns/layout/overrides.styl
+++ b/patterns/lfa-patterns/layout/overrides.styl
@@ -21,7 +21,7 @@ html, body
 html.touch body
   ul.tableofcontents
     li a:hover, li .fold-button:hover
-      background: inherit
+      background: inherit !important
 
 html.no-touch body
   #rightbar #search ul#search-results li a:hover
